@@ -482,9 +482,10 @@ UnityScreen::UnityScreen(CompScreen* screen)
 
     Introspectable::AddChild(deco_manager_.get());
     auto const& deco_style = decoration::Style::Get();
-    auto deco_style_cb = sigc::hide(sigc::mem_fun(this, &UnityScreen::OnDecorationStyleChanged));
+    auto deco_style_cb = sigc::hide(sigc::mem_fun(this, &UnityScreen::UpdateDecorationStyle));
     deco_style->theme.changed.connect(deco_style_cb);
     deco_style->title_font.changed.connect(deco_style_cb);
+    UpdateDecorationStyle();
 
     minimize_speed_controller_.DurationChanged.connect(
       sigc::mem_fun(this, &UnityScreen::OnMinimizeDurationChanged)
@@ -864,17 +865,28 @@ UnityWindow::updateIconPos(int &wx, int &wy, int x, int y, float width, float he
   wy = y + (last_bound.height - height) / 2;
 }
 
-void UnityScreen::OnDecorationStyleChanged()
+void UnityScreen::UpdateDecorationStyle()
 {
   for (UnityWindow* uwin : fake_decorated_windows_)
     uwin->CleanupCachedTextures();
 
-  auto const& style = decoration::Style::Get();
-  deco_manager_->shadow_offset = style->ShadowOffset();
-  deco_manager_->active_shadow_color = style->ActiveShadowColor();
-  deco_manager_->active_shadow_radius = style->ActiveShadowRadius();
-  deco_manager_->inactive_shadow_color = style->InactiveShadowColor();
-  deco_manager_->inactive_shadow_radius = style->InactiveShadowRadius();
+  if (optionGetOverrideDecorationTheme())
+  {
+    deco_manager_->active_shadow_color = NuxColorFromCompizColor(optionGetActiveShadowColor());
+    deco_manager_->inactive_shadow_color = NuxColorFromCompizColor(optionGetInactiveShadowColor());
+    deco_manager_->active_shadow_radius = optionGetActiveShadowRadius();
+    deco_manager_->inactive_shadow_radius = optionGetInactiveShadowRadius();
+    deco_manager_->shadow_offset = nux::Point(optionGetShadowXOffset(), optionGetShadowYOffset());
+  }
+  else
+  {
+    auto const& style = decoration::Style::Get();
+    deco_manager_->shadow_offset = style->ShadowOffset();
+    deco_manager_->active_shadow_color = style->ActiveShadowColor();
+    deco_manager_->active_shadow_radius = style->ActiveShadowRadius();
+    deco_manager_->inactive_shadow_color = style->InactiveShadowColor();
+    deco_manager_->inactive_shadow_radius = style->InactiveShadowRadius();
+  }
 }
 
 void UnityScreen::DamageBlurUpdateRegion(nux::Geometry const& blur_update)
@@ -2060,13 +2072,6 @@ void UnityScreen::handleEvent(XEvent* event)
     }
     case MapRequest:
       ShowdesktopHandler::InhibitLeaveShowdesktopMode (event->xmaprequest.window);
-      break;
-    case PropertyNotify:
-      if (bghash_ && event->xproperty.window == GDK_ROOT_WINDOW() &&
-          event->xproperty.atom == bghash_->ColorAtomId())
-      {
-        bghash_->RefreshColor();
-      }
       break;
     default:
         if (screen->shapeEvent() + ShapeNotify == event->type)
@@ -3617,43 +3622,16 @@ void UnityScreen::optionChanged(CompOption* opt, UnityshellOptions::Options num)
       break;
     }
     case UnityshellOptions::OverrideDecorationTheme:
-      if (optionGetOverrideDecorationTheme())
-      {
-        deco_manager_->active_shadow_color = NuxColorFromCompizColor(optionGetActiveShadowColor());
-        deco_manager_->inactive_shadow_color = NuxColorFromCompizColor(optionGetInactiveShadowColor());
-        deco_manager_->active_shadow_radius = optionGetActiveShadowRadius();
-        deco_manager_->inactive_shadow_radius = optionGetInactiveShadowRadius();
-        deco_manager_->shadow_offset = nux::Point(optionGetShadowXOffset(), optionGetShadowYOffset());
-      }
-      else
-      {
-        OnDecorationStyleChanged();
-      }
-      break;
     case UnityshellOptions::ActiveShadowColor:
-      if (optionGetOverrideDecorationTheme())
-        deco_manager_->active_shadow_color = NuxColorFromCompizColor(optionGetActiveShadowColor());
-      break;
-    case UnityshellOptions::InactiveShadowColor:
-      if (optionGetOverrideDecorationTheme())
-        deco_manager_->inactive_shadow_color = NuxColorFromCompizColor(optionGetInactiveShadowColor());
-      break;
     case UnityshellOptions::ActiveShadowRadius:
-      if (optionGetOverrideDecorationTheme())
-        deco_manager_->active_shadow_radius = optionGetActiveShadowRadius();
-      break;
+    case UnityshellOptions::InactiveShadowColor:
     case UnityshellOptions::InactiveShadowRadius:
-      if (optionGetOverrideDecorationTheme())
-        deco_manager_->inactive_shadow_radius = optionGetInactiveShadowRadius();
-      break;
     case UnityshellOptions::ShadowXOffset:
-      if (optionGetOverrideDecorationTheme())
-        deco_manager_->shadow_offset = nux::Point(optionGetShadowXOffset(), optionGetShadowYOffset());
-      break;
     case UnityshellOptions::ShadowYOffset:
-      if (optionGetOverrideDecorationTheme())
-        deco_manager_->shadow_offset = nux::Point(optionGetShadowXOffset(), optionGetShadowYOffset());
+    {
+      UpdateDecorationStyle();
       break;
+    }
     case UnityshellOptions::LauncherHideMode:
     {
       launcher_options->hide_mode = (launcher::LauncherHideMode) optionGetLauncherHideMode();
@@ -3852,6 +3830,12 @@ void UnityScreen::outputChangeNotify()
                                                    NUX_TRACKER_LOCATION);
 
   ScheduleRelayout(500);
+}
+
+void UnityScreen::averageColorChangeNotify(const unsigned short *color)
+{
+  bghash_->UpdateColor(color, nux::animation::Animation::State::Running);
+  screen->averageColorChangeNotify (color);
 }
 
 bool UnityScreen::layoutSlotsAndAssignWindows()
@@ -4078,6 +4062,7 @@ void UnityScreen::InitUnityComponents()
   nux::GetWindowCompositor().sigHiddenViewWindow.connect(sigc::mem_fun(this, &UnityScreen::OnViewHidden));
 
   bghash_.reset(new BGHash());
+  bghash_->UpdateColor(screen->averageColor(), nux::animation::Animation::State::Stopped);
   LOG_INFO(logger) << "InitUnityComponents-BGHash " << timer.ElapsedSeconds() << "s";
 
   auto xdnd_collection_window = std::make_shared<XdndCollectionWindowImp>();
