@@ -163,6 +163,7 @@ protected:
   bool initPluginForScreen(CompPlugin* p) override;
 
   void outputChangeNotify() override;
+  void averageColorChangeNotify(const unsigned short *color) override;
 
   CompAction::Vector& getActions() override;
 
@@ -282,7 +283,7 @@ private:
 
   bool SaveInputThenFocus(const guint xid);
 
-  void OnDecorationStyleChanged();
+  void UpdateDecorationStyle();
 
   void InitGesturesSupport();
   void UpdateGesturesSupport();
