@@ -68,6 +68,7 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
   [ Marco Trevisan (Treviño) ]
   * compiz-profile-setter: tool to update the current profile and use in
     systemd and Unity settings (LP: #1668950)
+  * BGHash, UnityScreen: get desktop averageColor from compiz
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
